--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -75,12 +75,14 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          username: xanmanning
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push container image
         uses: docker/build-push-action@v2
+        env:
+          GITHUB_ORG: ${{ github.repository_owner }}
         with:
           context: .
           push: true
-          tags: xanmanning/vault-dump:latest,xanmanning/vault-dump:${{ steps.get_version.outputs.VERSION }}
+          tags: ${GITHUB_ORG,,}/vault-dump:latest,${GITHUB_ORG,,}/vault-dump:${{ steps.get_version.outputs.VERSION }}
